--- a/ui/style.css
+++ b/ui/style.css
@@ -20,3 +20,13 @@ body {
     height: 200px;
 }
 
+.container{
+    max-width: 800px;
+    color: #774242;
+    font-family: sans-serif;
+    margin: 0 auto;
+    padding-top: 52px;
+    padding-left: 24px;
+    padding-right: 24px;
+}
+
